# taskoo-task-register-tauri

./: README.md  angular.json  latest.json  latest.yml  package-lock.json  package.json  task_register_local.db
src/: styles.css
src-tauri/: Cargo.toml  latest.json  task_register_local.db  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/db/: configurations_repository.rs  connection.rs  ddl.rs  mod.rs  registros_repository.rs
src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts
src/app/app-window/: app-window.component.html  app-window.component.ts
src/app/configuracoes/: configuracoes.component.css  configuracoes.component.html  configuracoes.component.ts
src/app/confirmacao-exclusao-registro/: confirmacao-exclusao-registro.component.css  confirmacao-exclusao-registro.component.html  confirmacao-exclusao-registro.component.ts
src/app/day-summary/: day-summary.component.css  day-summary.component.html  day-summary.component.ts
src/app/dialog-change-autorun/: dialog-change-autorun.component.css  dialog-change-autorun.component.html  dialog-change-autorun.component.ts
src/app/dialog-check-update/: dialog-check-update.component.css  dialog-check-update.component.html  dialog-check-update.component.ts
src/app/dialog-note-reminder/: dialog-note-reminder.component.html  dialog-note-reminder.component.ts
src/app/dialog-start-reminders/: dialog-start-reminders.component.ts  (+1 more)
src/utils/: app.settings.ts  app.utils.ts  atualizar.ts  custom-datepicker-formatter.ts  event-service.ts  hora-mask.directive.ts
(+36 files in other folders)
